# midex-class-firmware

./: .gitignore  README.md
.github/workflows/: release.yml
doc/: bringup.md  bus_write_debug.md  firmware_build.md  hardware_register_map.md  midex8_r1_vs_r2.md  phase3_build.md  spike_bringup.md  timer_isr_rx_capture_design.md
firmware/: .gitignore  Makefile  board.h  board_r1.h  board_r2.h  main.c  main_probe.c  midi_config.h  midi_parser.c  midi_parser.h  uart.c  uart.h  uart_ext.c  uart_ext.h  uart_onchip.c  uart_onchip.h  usb.c  usb_descriptors.c  usb_probe.c
host/: .gitignore  CMakeLists.txt  README.md  class_loopback.py  diag.py  e2e_test.py  experiment.py  hammer.py  localize_port.sh  loopback.py  map_scan.py  map_writes.py  midex-fw-upload.c  midex-fwctl.sh  probe_uart.py  spike_loopback.py  stretch_sweep.py  usbmon_localize.sh
host/install/: 99-midex-class.rules  midex-class-blacklist.conf  midex-upload-dispatch.sh  midex-upload@.service
